@@ -113,7 +113,7 @@ function pretty_buffer_callback($matches)
 	global $context, $scripturl;
 
 	// Is this URL in an attribute, and so will need new quotes?
-	$addQuotes = preg_match('~[\"\']$~', $matches[1]);
+	$addQuotes = preg_match('~^[\"\']~', $matches[2]);
 
 	//	Remove those annoying quotes
 	$matches[2] = preg_replace('~^[\"\']|[\"\']$~', '', $matches[2]);
